tests/neg/locals.jo
def foo(n: Int): Int =
  var a: Int = 3

  if n > 5 then
    val b: Int = n * 2
  else
    val c: Int = n + 10
    b p                // error
  end

  c p                  // error

  while a > 0 do
    var d: Int = a + 2
    println d
    b p                // error
  end

  d p                  // error

  4

def bar(): Int = a     // error

def main =
  a p                    // error
  println (foo 10)
